--- a/H05/formulier.html
+++ b/H05/formulier.html
@@ -36,12 +36,12 @@
 
 
 <!--//6,7-->
-<!--<form action="response.php"method="post">-->
-<!--    Email<input type="email" name="email" placeholder="write your email"></br>-->
-<!--    Wachtwoord<input type="password" name="wachtwoord" placeholder="write your password"></br>-->
-<!--<input type="submit" name="Submit">-->
+<form action="response.php"method="post">
+    Email<input type="email" name="email" placeholder="write your email"></br>
+    Wachtwoord<input type="password" name="wachtwoord" placeholder="write your password"></br>
+<input type="submit" name="Submit">
 
-<!--</form>-->
+</form>
 
 
 </body>
